# faculty-bot

./: .dockerignore  .env.example  .gitignore  .swcrc  Cargo.toml  Dockerfile  README.md  build.rs  config.json  docker-compose.yml  docker_db.yml  faculty_manager.service  general-settings.json  index.js  index.ts  launch_bot.sh  launch_openrc.sh  launch_systemd.sh  launch_windows.ps1  package-lock.json  package.json  translations.de.json  tsconfig.json  tsconfig.tsbuildinfo
.dist/: rulesupdate.ts  sendmessage.ts
.fleet/: settings.json
.github/workflows/: docker-image.yml  publish_image.yml  release-dev.yml  release-master.yml
commands/: add.js  addmember.js  close.js  coin.js  deleteteam.js  getbymail.js  getbymail.ts  help.js  help.ts  move.js  registerteam.js  remove.js  removemember.js  rulesupdate.js  rulesupdate.ts  sendmessage.js  sendmessage.ts  setteamcolor.js  summoner.js  ticket.js  verify.js  verify.ts  xp.js  xp.ts
docs/: add-a-translation.md  setup-guide.md
events/: channelUpdate.ts  guildMemberAdd.ts  messageCreate.ts  ready.ts  voiceStateUpdate.ts
functions/: extensions.js  extensions.ts  messenger.js
i18n/: de.json  en.json  ja.json
migrations/: 20221206200449_faculty-manager-init.sql  faculty_manager.sql
src/: config.rs  eventhandler.rs  index.ts  main.rs  structs.rs  tasks.rs  utils.rs  utils.ts
src-old/: index.ts  tsconfig.json
src-old/commands/: getbymail.ts  help.ts  leaderboard.ts  verify.ts
src-old/events/: channelUpdate.ts  messageCreate.ts  ready.ts
src/commands/: addsemestermod.ts  administration.rs  deletemsg.ts  mod.rs  (+11 more)
(+8 files in other folders)
