[package]
name = "faculty_manager"
version = "0.1.0"
edition = "2021"
authors = ["Jan H <hi@rndrmu.moe>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
poise = { version = "0.5.0", features = ["cache"]}
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1"
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
redis = "0.21.6"
chrono = "0.4"
rand = "0.8"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
bitfield = "0.13.2"
