[package]
name = "faculty_manager"
version = "0.1.0"
edition = "2021"
authors = ["Jan H <hi@rndrmu.moe>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
poise = { version = "0.5.1", features = ["cache"]}
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1"
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
rand = "0.8"
sqlx = { version = "0.6", features = [
    "all-types",
    "chrono",
    "macros",
    "runtime-tokio-rustls",
    "postgres"
] }
md5 = "0.7.0"
base64 = "0.20.0"
native-tls = "0.2.11"
imap = "2.4.1"
rss = "2.0.3"
regex = "1.5.4"
